@@ -680,11 +680,11 @@ class ZMProduct extends ZMObject {
     /**
      * Get meta tag details if available.
      *
-     * @param int languageId The language id.
+     * @param int languageId Optional language id; default is <code>null</code> to use the current language id of this instance.
      * @return ZMMetaTagDetails The details or <code>null</code>.
      */
-    public function getMetaTagDetails($languageId) {
-        return ZMProducts::instance()->getMetaTagDetailsForId($this->getId(), $languageId);
+    public function getMetaTagDetails($languageId=null) {
+        return ZMProducts::instance()->getMetaTagDetailsForId($this->getId(), null != $languageId ? $languageId : $this->getLanguageId());
     }
 
 }
